# ChangeLog for app-text/dgs
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/dgs/ChangeLog,v 1.30 2008/03/18 13:24:47 flameeyes Exp $

  24 Jun 2011; Justin Lecher <jlec@gentoo.org> dgs-0.5.10-r2.ebuild:
  Sort inherit and/or USE

  23 Jun 2010; Andreas K. Huettel (dilfridge) <mail@akhuettel.de>
  dgs-0.5.10-r2.ebuild:
  Added note: upstream is dead

  23 Jun 2010; Andreas K. Huettel (dilfridge) <mail@akhuettel.de>
  dgs-0.5.10-r2.ebuild:
  QA fixes

*dgs-0.5.10-r2 (19 Sep 2009)

  19 Sep 2009; Etienne Lorriaux <etienne.lorriaux@gmail.com>
  -dgs-0.5.10-r1.ebuild, +dgs-0.5.10-r2.ebuild,
  +files/dgs-fix-as-needed.patch:
  Fix --as-needed LDFLAG + modifs thanks to Olivier Huber

  deleted: dgs-0.5.10-r1.ebuild

  new file: dgs-0.5.10-r2.ebuild

  new file: files/dgs-fix-as-needed.patch


  17 Sep 2009; Etienne Lorriaux <etienne.lorriaux@gmail.com>
  +files/0.5.10-workaround-include-in-comments.patch, +dgs-0.5.10-r1.ebuild,
  +files/dgs-0.5.10-gcc-3.4.diff, +files/dgs-0.5.10-gs-time_.h-gentoo.diff,
  +files/dgs-0.5.10-tcpd-gentoo.diff, +metadata.xml:
  First import in science overlay as an opencascade dependency, see bug

  http://bugs.gentoo.org/show_bug.cgi?id=246960

  18 Mar 2008; Diego Pettenò <flameeyes@gentoo.org> dgs-0.5.10-r1.ebuild:
  Run eautoconf during unpack phase. Closes bug #207431.

  14 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

  19 Jan 2007; Raúl Porcel <armin76@gentoo.org> dgs-0.5.10-r1.ebuild:
  ugh, fix autotools handling again, my fault.  Thanks masterdriverz

  19 Jan 2007; Raúl Porcel <armin76@gentoo.org> dgs-0.5.10-r1.ebuild:
  Fix autotools handling, bug 160155

  05 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> dgs-0.5.10-r1.ebuild:
  Remove gnuconfig_update usage, leave it to econf.

  23 Mar 2006; Donnie Berkholz <spyderous@gentoo.org>; dgs-0.5.10-r1.ebuild:
  (#127342) Doesn't build in parallel, found by Erik Zeek.
