@@ -1,6 +1,10 @@
 # ChangeLog for app-text/dgs
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-text/dgs/ChangeLog,v 1.30 2008/03/18 13:24:47 flameeyes Exp $
+
+  01 Nov 2014; Justin Lecher <jlec@gentoo.org> dgs-0.5.10-r2.ebuild,
+  metadata.xml:
+  Bump to EAPI=5
 
   24 Jun 2011; Justin Lecher <jlec@gentoo.org> dgs-0.5.10-r2.ebuild:
   Sort inherit and/or USE
